Adjust header css due to overflow issue as test

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,14 @@
+/*Overflow issue*/
+body {
+  overflow-x: hidden;
+}
+
 header {
     background-color: #cf9c3f;
     position: fixed;
-    width: 100%;
+    width: 100vw;
+    left: 0;
+    right: 0;
     min-height: 75px;
     display: flex;
     justify-content: space-between;
@@ -87,7 +94,7 @@ body, main {
 #hero {
     background: url('../images/1161920_1000_1.jpg') no-repeat center center;
     background-size: cover;
-    width: 500px;
+    width: 100%;
     height: 500px;
     margin: 0 auto;
     margin-bottom: 0;
@@ -174,7 +181,7 @@ form {
 
 /* Footer on every page */
 footer {
-    width: 500px;
+    width: 100%;
     justify-content: center;
 }
 
